--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
   },
   "dependencies": {
     "@mdi/js": "^7.0.96",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "formik": "^2.4.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "mysql2": "^3.11.3",
     "next": "^14.2.8",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.1",
     "swr": "^2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@types/node": "20.3.2",
+    "@types/node": "^20.3.2",
     "@types/numeral": "^2.0.2",
+    "@types/react": "^18.3.9",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
@@ -38,6 +43,6 @@
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.6.2"
   }
 }
