--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
