--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mysql2": "^3.11.3",
     "next": "^14.2.13",
     "numeral": "^2.0.6",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
