--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "mysql2": "^3.11.3",
     "next": "^14.2.13",
     "numeral": "^2.0.6",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.1",
     "swr": "^2.2.0"
